check boundary detection

--- a/baseline/workbookII.ipynb
+++ b/baseline/workbookII.ipynb
@@ -103,7 +103,7 @@
    ],
    "source": [
     "#basically using laplacian to get eigenvectors, and construct Y by selecting top m smallest eigenvalues\n",
-    "Y0 = laplacian.getNormLaplacian(img, 10)\n",
+    "Y0 = laplacian.getNormLaplacian(img, 10) #similarity matrix, top m eigenvectors\n",
     "Y1 = laplacian.getNormLaplacian(o1, 10)\n",
     "Y2 = laplacian.getNormLaplacian(o2, 10)\n",
     "Y3 = laplacian.getNormLaplacian(o3, 10)\n",
@@ -161,7 +161,7 @@
     }
    ],
    "source": [
-    "Y3 = laplacian.getNormLaplacian(o3, 25)\n",
+    "Y3 = laplacian.getNormLaplacian(o3, 25) #similarity matrix, top m eigenvectors\n",
     "YY = np.dot(Y3[:,:], np.transpose(Y3)[:,:])\n",
     "print Y3.shape\n",
     "\n",
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -193,26 +193,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(6, 25) (100,)\n",
-      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 3 0 5 4] [4 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 2] [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0] [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0] [0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]\n"
+      "[[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 38, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 79, 80, 81, 82], [83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99], [21], [39], [78], [37], [61], [77]]\n"
      ]
     }
    ],
    "source": [
     "from sklearn.cluster import KMeans\n",
-    "nCluster = 6\n",
-    "Y3 = laplacian.getNormLaplacian(o3, 25)\n",
+    "nCluster = 8\n",
+    "Y3 = laplacian.getNormLaplacian(o3, 25) #similarity matrix, top m eigenvectors\n",
     "\n",
     "def boundaryDetection(Y, nCluster):\n",
     "    row_leng = np.linalg.norm(Y, axis=1) #get length of each row\n",
     "    row_leng[row_leng==0] = 1 #replace the legth of 0 to 1\n",
     "    Y_norm = Y / row_leng[:, np.newaxis]\n",
+    "\n",
     "    clf = KMeans(n_clusters=nCluster, max_iter=300).fit(Y_norm)\n",
     "    centroids, labels = clf.cluster_centers_, clf.labels_\n",
-    "    print centroids.shape, labels.shape\n",
-    "    print labels[:21], labels[20:41], labels[41:61], labels[61:81], labels[81:101]\n",
     "\n",
-    "boundaryDetection(Y3, nCluster)\n"
+    "    boundary = [[] for _ in xrange(nCluster)]\n",
+    "    for time, label in enumerate(labels):\n",
+    "        boundary[label-1] +=[time]\n",
+    "    \n",
+    "    return boundary, centroids\n",
+    "\n",
+    "b, c = boundaryDetection(Y3, nCluster)\n",
+    "print b\n"
    ]
   },
   {
