--- a/siamltexmm/report.tex
+++ b/siamltexmm/report.tex
@@ -66,5 +66,13 @@ Hi2sub!
 \subsection{ToDos}
 Hi3!
 
+\begin{thebibliography}{10}
+\bibitem{fpf} {\sc A Tutorial on Spectral Clustering}
+\bibitem{fpf} {\sc Analyzing Song Structure with Spectral Clustering}
+\bibitem{fpf} {\sc Deep clustering: Discriminative embeddings for
+segmentation and separation}
+\bibitem{fpf} {\sc Learning Deep Representations for Graph Clustering}
+
+\end{thebibliography}
 
 \end{document}
