--- a/realMusic/workbook.ipynb
+++ b/realMusic/workbook.ipynb
@@ -57,12 +57,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Construct R from mfcc"
+    "# Construct R and delta from mfcc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -72,16 +72,16 @@
      "output_type": "stream",
      "text": [
       "(12288, 20)\n",
-      "[[0 1 0 0 0 0 0 0 0 0]\n",
-      " [1 0 1 0 0 0 0 0 0 0]\n",
-      " [0 1 0 1 0 0 0 0 0 0]\n",
-      " [0 0 1 0 1 0 0 0 0 0]\n",
-      " [0 0 0 1 0 1 0 0 0 0]\n",
-      " [0 0 0 0 1 0 1 0 0 0]\n",
-      " [0 0 0 0 0 1 0 1 0 0]\n",
-      " [0 0 0 0 0 0 1 0 1 0]\n",
-      " [0 0 0 0 0 0 0 1 0 1]\n",
-      " [0 0 0 0 0 0 0 0 1 0]]\n",
+      "[[ 0.  1.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 1.  0.  1.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  1.  0.  1.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  1.  0.  1.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  1.  0.  1.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  1.  0.  1.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  1.  0.  1.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  1.  0.  1.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  1.  0.  1.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  1.  0.]]\n",
       "R is symmetric:  True (12288, 12288)\n",
       "delta is symmetric:  True (12288, 12288)\n"
      ]
@@ -116,22 +116,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0 1 0 0 0 0 0 0 0 0]\n",
-      " [1 0 1 0 0 0 0 0 0 0]\n",
-      " [0 1 0 1 0 0 0 0 0 0]\n",
-      " [0 0 1 0 1 0 0 0 0 0]\n",
-      " [0 0 0 1 0 1 0 0 0 0]\n",
-      " [0 0 0 0 1 0 1 0 0 0]\n",
-      " [0 0 0 0 0 1 0 1 0 0]\n",
-      " [0 0 0 0 0 0 1 0 1 0]\n",
-      " [0 0 0 0 0 0 0 1 0 1]\n",
-      " [0 0 0 0 0 0 0 0 1 0]]\n"
+      "0.988592836828 (12288, 12288)\n"
      ]
     }
    ],
    "source": [
-    "delta = RM.adjacentMatrix(R.shape[0])\n",
-    "print delta[:10,:10]\n",
+    "miu = RM.getBalancedMiu(R, delta)\n",
+    "R_gau = RM.gaussianKernel(R)\n",
+    "print miu, R_gau.shape\n",
     "\n"
    ]
   },
